stuffinspace/stuffinspace-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stuffinspace
  namespace: default
spec:
  selector:
    app: stuffinspace
  ports:
  - name: web
    port: 80
    targetPort: 80
