stuffinspace/stuffinspace-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stuffinspace
spec:
  rules:
  - host: stuffinspace.lan
    http:
      paths:
      - backend:
          service:
            name: stuffinspace
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
